cft/db-sg.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow MySQL access from app tier",
        "VpcId": "vpc-37e67c51",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 3306,
            "ToPort": 3306,
            "SourceSecurityGroupId": "sg-09df0c4515f0c40e2"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3306,
            "ToPort": 3306,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 6,
            "ToPort": 6,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 5,
            "ToPort": 5,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  }
}
